# arches-containers

./: .gitignore  README.md  create_arches_container_project.py  install_arches_repo.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: publish-to-pypi.yml  publish-to-testpypi.yml  run-tests.yml
arches_containers/: __init__.py  create_ac.py  create_launch_config.py  install_arches.py  main.py  manage.py  manage_ac.py
arches_containers/template/_6.1_/: Dockerfile  config.json  docker-compose-dependencies.yml  docker-compose-persist-dependencies.yml  docker-compose.yml
arches_containers/template/_6.1_/docker/: settings_local.py
arches_containers/template/_6.2_/: config.json  docker-compose-dependencies.yml  docker-compose-persist-dependencies.yml  docker-compose.yml
arches_containers/template/_6.x_6.1_6.2_/: docker-compose-dependencies.yml
arches_containers/template/_7.0_/: Dockerfile  config.json
arches_containers/template/_7.0_/docker/: init-unix.sql
arches_containers/template/_7.1_/: config.json
arches_containers/template/_7.1_/docker/: settings_local.py
arches_containers/template/_7.2_/: config.json  docker-compose-init.yml
arches_containers/template/_7.2_/docker/: supervisor.conf
arches_containers/template/_7.3_/: config.json  docker-compose-dependencies.yml  docker-compose.yml
arches_containers/template/_7.4_/: config.json
arches_containers/template/_7.5_/: Dockerfile  config.json  docker-compose-init.yml  docker-compose-persist-dependencies.yml
arches_containers/template/_7.5_/docker/: entrypoint.sh  settings_local.py
arches_containers/template/_7.6_/: config.json  docker-compose-dependencies.yml  docker-compose-init.yml  docker-compose-persist-dependencies.yml  docker-compose.yml
arches_containers/template/_7.6_/docker/: entrypoint.sh
arches_containers/template/_7.x_7.3_7.4_/docker/: env_file.env
arches_containers/template/_8.0_/: Dockerfile  config.json  docker-compose-dependencies.yml  docker-compose-persist-dependencies.yml  docker-compose.yml
arches_containers/template/_8.0_/docker/: settings_local.py
arches_containers/utils/: ac_context.py  arches_repo_helper.py  create_launch_config.py  logger.py  status.py  test_arches_repo_helper.py  test_create_launch_config.py  test_logger.py  test_status.py  workspace.py
template/: Dockerfile  docker-compose-dependencies.yml  docker-compose.yml
template/_6.x_6.1_6.2_/: Dockerfile  Dockerfile.deploy  docker-compose-dependencies.yml  docker-compose-persist-dependencies.yml  docker-compose.yml
template/_6.x_6.1_6.2_/docker/: entrypoint.sh  env_file.env  settings_local.py
template/_6.x_6.1_6.2_/docker/conf.d/: celerybeat.conf
template/_6.x_6.1_6.2_/docker/pg_featureserv_config/: pg_featureserv.toml
template/_6.x_6.1_6.2_/docker/webpack/: entrypoint.sh
template/_6.x_6.1_6.2_/docker_deploy/: arches_supervisord.conf  entrypoint.sh  settings_local.py
template/_6.x_6.1_6.2_/docker_deploy/conf.d/: celerybeat.conf  celeryd.conf
template/_6.x_6.1_6.2_/docker_deploy/nginx-config/: arches.template  default.conf
template/_6.x_6.1_6.2_/helper_scripts/: docker_up.sh
template/_7.5_/: Dockerfile  docker-compose-dependencies.yml  docker-compose.yml
template/_7.5_/docker/: entrypoint.sh  env_file.env  settings_local.py
template/_7.5_/docker/conf.d/: celerybeat.conf  celeryd.conf
template/_7.6_/: Dockerfile  docker-compose-dependencies.yml  docker-compose-persist-dependencies.yml
template/_7.6_/docker/: entrypoint.sh  settings_local.py
template/_7.x_7.3_7.4_/: Dockerfile  Dockerfile.deploy  docker-compose-dependencies.yml  docker-compose-init.yml  docker-compose-persist-dependencies.yml  docker-compose.yml  docker_down.bat
template/_7.x_7.3_7.4_/docker/: entrypoint.sh  env_file.env  settings_docker.py  settings_local.py
template/_7.x_7.3_7.4_/helper_scripts/: docker_down.sh
template/_7.x_7.3_7.4_7.5_/: docker-compose-dependencies.yml  docker_up.bat
template/_7.x_7.3_7.4_7.5_/docker/: env_file.env  settings_local.py
template/_8.0_/: config.json  docker-compose-dependencies.yml  docker-compose-persist-dependencies.yml
template/docker/: entrypoint.sh  env_file.env
template/docker/pg_featureserv_config/: pg_featureserv.toml
template/docker/pg_tileserv_config/: pg_tileserv.toml
tests/: test_arches_repo_helper.py  test_create_launch_config.py  test_logger.py  test_restart.py  test_workspace.py
(+21 files in other folders)
