[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arches-containers"
version = "0.5.15"
description = "A python developer tool for Arches Project that provides a way to create arches development environments. Supports Arches 6.1 to 8.0 (current development version)."
requires-python = ">=3.8"
license = { text = "AGPL-3.0" }
keywords = ["arches", "development", "containers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"
authors = [
    { name = "Andrew Jones", email = "andrew.jones@historicengland.org.uk" }
]
dependencies = [
    "python-slugify==7.0.0",
    "text-unidecode==1.3",
    "rich==13.9.4",
    "rich-argparse==1.6.0",
    "prettytable==3.12.0"
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest"
]

[project.scripts]
arches-containers = "arches_containers.main:main"
act = "arches_containers.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"arches_containers" = ["template/**"]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "test_*"]